@@ -14,6 +14,7 @@ NEW FEATURE:  Jukebox mode.  Like demonstration, but plays entire songs
 NEW FEATURE:  F6 to save screenshot.  Saved in StepMania program directory
 	as "screenshotXXXX.bmp".
 CHANGE:  Reorganization of options screens.
+NEW FEATURE: Option for user-selectable extra stage 1
 
 ----------------------- Version 3.01 ---------------------------
 CHANGE:  Simplified NoteSkin tap graphic format.  Old NoteSkins will need to 
